python-web-server/tests/requests/invalid/obs_fold_01.py
from web_server.http.errors import ObsoleteFolding

request = ObsoleteFolding
